--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "seed": "ts-node seed.ts"
+    "seed": "ts-node seed.ts",
+    "test-all": "vitest --run",
+    "test": "vitest --watch p11.test"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.19.33",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
-    "prisma": "^4.10.1",
-    "ts-node": "^10.9.1",
+    "prisma": "^5.14.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vitest": "^0.28.5"
   },
   "dependencies": {
-    "@prisma/client": "^4.10.1",
+    "@prisma/client": "^5.14.0",
     "remeda": "^1.6.1",
     "zod": "^3.20.6"
   }
